feat:   总之添加了一个新功能还是解释下吧XP   1. 将file search tool重构为rg   2. 添加一个新的 AgentTool 工具作为路由，添加一个新的开启子agent 的工具handler   3. 添加针对session的无审查模式